--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <p class="item"id= "poop2">POO</p>
     </div>
   </div>
-
+    
+    <script src="your-custom-script2.js"></script>
     <div id="icosphere-container"></div>
-
 
   
   </body>
