--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Spinning Icosphere</title>
     <script src="three.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="ezgif-4-20fe377640.gif" type="image/x-icon">
+    <link rel="icon" href="ezgif.com-gif-to-apng.png" type="image/x-icon">
 
     <header>
       <nav>
